Updated yomobi upgrade ad text and CSS

--- a/app/views/mobile/_yomobi-upgrade-ad.html.erb
+++ b/app/views/mobile/_yomobi-upgrade-ad.html.erb
@@ -1,4 +1,6 @@
 
 <div class="yomobi-upgrade-ad">
-  <a href="http://help.yomobi.com" target="_blank"><%= t 'builder.upgrade_ad.title' %></a>
+  <p>
+  	<a href="http://help.yomobi.com" target="ymhelp"><%= t 'builder.upgrade_ad.title' %></a>
+  </p>
 </div>
