--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -208,11 +208,13 @@ p {
 .ad-bar {
   display: none;
   padding: 0 0;
-  border-bottom: 2px solid $secondary-color;
+  border-bottom: 1px solid $secondary-color;
   background: $color-topbar;
   text-align: center;
   &.bottom {
-    height: 48px; } }
+    border-top: 1px solid $secondary-color;
+    border-bottom: none;
+  } }
 
 .back-btn {
   cursor: pointer;
@@ -543,13 +545,13 @@ pre {
 }
 
 .yomobi-upgrade-ad {
-  height: 48px;
-  padding: 1px;
+  font-size: 13px;
+  font-weight: bold;
+  color: red;
   background: yellow;
+  p { padding: 6px; }
   a { color: red; text-decoration: none; }
   a:hover { text-decoration: underline; }
-  h3 { font-size: 14px; }
-  line-height: 48px;
 }
 
 // WYSIWYG Photo styling
