--- a/public/stylesheets/sass/site-manager.scss
+++ b/public/stylesheets/sass/site-manager.scss
@@ -91,11 +91,20 @@ h2.active-site {
   padding: 10px;
   border-left: 1px solid $light-border;
 
-  .site-details { padding-bottom: 10px; }
+  .site-details { 
+    color: #333;
+    background: #F39814;
+    padding: 1px 10px 10px 10px; 
+    margin-bottom: 10px;
+    border: 1px solid #B3B3B3;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 6px;
+  }
 
   .content-header {
     border: 1px solid transparent;
-    border-top: 1px solid $light-border;
+    border-bottom: 1px solid $light-border;
     padding: 10px;
     .title { float: left; width: 175px; margin: 0; }
     .status { float: left; width: 275px; }
