--- a/public/stylesheets/site-manager.css
+++ b/public/stylesheets/site-manager.css
@@ -74,10 +74,17 @@ h2.active-site {
   padding: 10px;
   border-left: 1px solid #b3b3b3; }
   .accordian .site-details {
-    padding-bottom: 10px; }
+    color: #333;
+    background: #F39814;
+    padding: 1px 10px 10px 10px;
+    margin-bottom: 10px;
+    border: 1px solid #B3B3B3;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 6px; }
   .accordian .content-header {
     border: 1px solid transparent;
-    border-top: 1px solid #b3b3b3;
+    border-bottom: 1px solid #b3b3b3;
     padding: 10px; }
     .accordian .content-header .title {
       float: left;
