autoupload and ie fix

--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -239,7 +239,7 @@ div.wysiwyg ul.toolbar {
       margin-right: 8px;
       width: 57px;
       height: 57px;
-      background-size: 57px 57px;
+      background-size: 57px 57px !important;
       border-radius: 12px;
       -webkit-border-radius: 12px;
       -moz-border-radius: 12px;
