--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -241,7 +241,7 @@ p {
   .icon {
     width: 57px;
     height: 57px;
-    background-size: 57px 57px;
+    background-size: 57px 57px !important;
     margin: 0 auto 4px auto;
     border-radius: 12px;
     -webkit-border-radius: 12px;
