--- a/app/views/site_manager/index.html.slim
+++ b/app/views/site_manager/index.html.slim
@@ -152,7 +152,8 @@
           label Autopay Yearly - $48.76year
           br
           br
-          input type="checkbox" name="terms" I agree to terms.
+          input type="checkbox" name="terms" 
+            a href="payment_terms" target="ymhelp" I agree to terms.
           input type="submit" value="Submit"
       .error.hide
 
