--- a/public/stylesheets/sass/app.scss
+++ b/public/stylesheets/sass/app.scss
@@ -493,9 +493,9 @@ label.help { padding-bottom: 4px; }
   
   h1 { padding-left: 0px !important; }
   .hilite { font-weight: bold; color: red; }
-  li { font-size: 14px; font-weight: bold; }
 }
 
+.bold_list { font-size: 14px; font-weight: bold; }
 
 
 
