--- a/public/stylesheets/sass/site-manager.scss
+++ b/public/stylesheets/sass/site-manager.scss
@@ -93,10 +93,10 @@ h2.active-site {
 
   .site-details { 
     color: #333;
-    background: #F39814;
+    background: #E4EDF8;
     padding: 1px 10px 10px 10px; 
     margin-bottom: 10px;
-    border: 1px solid #B3B3B3;
+    border: 2px solid #F39814;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 6px;
