--- a/public/stylesheets/site-manager.css
+++ b/public/stylesheets/site-manager.css
@@ -75,10 +75,10 @@ h2.active-site {
   border-left: 1px solid #b3b3b3; }
   .accordian .site-details {
     color: #333;
-    background: #F39814;
+    background: #E4EDF8;
     padding: 1px 10px 10px 10px;
     margin-bottom: 10px;
-    border: 1px solid #B3B3B3;
+    border: 2px solid #F39814;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 6px; }
