Added missing line to es.yml. Updated site-manager css

--- a/public/stylesheets/sass/site-manager.scss
+++ b/public/stylesheets/sass/site-manager.scss
@@ -130,6 +130,7 @@ h2.active-site {
     clear: both;
     border-bottom: 1px solid #B3B3B3;
     .error { margin-top: 10px; }
+    .payment-complete { margin-bottom: 8px; }
   }
 
   .signup-keys {
