--- a/public/stylesheets/sass/site-manager.scss
+++ b/public/stylesheets/sass/site-manager.scss
@@ -131,6 +131,9 @@ h2.active-site {
     border-bottom: 1px solid #B3B3B3;
     .error { margin-top: 10px; }
     .payment-complete { margin-bottom: 8px; }
+    .renew { margin-top: 12px; }
+    input[type="button"], input[type="submit"], button { margin-left: 0px; }
+    .pay-options a { margin-right: 6px; }
   }
 
   .signup-keys {
