--- a/public/stylesheets/site-manager.css
+++ b/public/stylesheets/site-manager.css
@@ -114,6 +114,12 @@ h2.active-site {
       margin-top: 10px; }
     .accordian .content-body .payment-complete {
       margin-bottom: 8px; }
+    .accordian .content-body .renew {
+      margin-top: 12px; }
+    .accordian .content-body input[type="button"], .accordian .content-body input[type="submit"], .accordian .content-body button {
+      margin-left: 0px; }
+    .accordian .content-body .pay-options a {
+      margin-right: 6px; }
   .accordian .signup-keys .signup-key-input {
     width: 510px; }
   .accordian ul.admins {
