Updated site-manager css highlight color.

--- a/public/stylesheets/sass/site-manager.scss
+++ b/public/stylesheets/sass/site-manager.scss
@@ -116,12 +116,12 @@ h2.active-site {
     }
   }
   .content-header.active {
-    background: $highlight-color;
+    background: #e5ebf5;
     border-bottom: 0px;
   }
   .content-header:hover {
     cursor: pointer;
-    background: $highlight-color;
+    background: #e5ebf5;
   }
   .content-body {
     padding: 6px 10px 20px 10px;
