--- a/public/stylesheets/site-manager.css
+++ b/public/stylesheets/site-manager.css
@@ -99,11 +99,11 @@ h2.active-site {
       text-decoration: underline;
       float: right; }
   .accordian .content-header.active {
-    background: #d8dfea;
+    background: #e5ebf5;
     border-bottom: 0px; }
   .accordian .content-header:hover {
     cursor: pointer;
-    background: #d8dfea; }
+    background: #e5ebf5; }
   .accordian .content-body {
     padding: 6px 10px 20px 10px;
     background: #e5ebf5;
