Payments: Update expire/charge date after subscription cancel. Closes #313

--- a/app/views/site_manager/index.html.slim
+++ b/app/views/site_manager/index.html.slim
@@ -116,7 +116,7 @@
         | <% } %>
       .clearfix
     .content-body
-      | <% if (subscriptionEndDate === 'cancelled') { %>
+      | <% if (_maybe.justCancelled) { %>
       label = t 'site_manager.cancel_success'
       | <% } %>
 
