--- a/public/stylesheets/sass/site-manager.scss
+++ b/public/stylesheets/sass/site-manager.scss
@@ -134,6 +134,7 @@ h2.active-site {
     .payment-complete { margin-bottom: 8px; }
     .renew { margin-top: 12px; }
     input[type="button"], input[type="submit"], button { margin-left: 0px; }
+    .back-btn { font-size: 14px; }
     
     .pay-options {
       margin-top: 6px;
