--- a/public/stylesheets/site-manager.css
+++ b/public/stylesheets/site-manager.css
@@ -119,6 +119,8 @@ h2.active-site {
       margin-top: 12px; }
     .accordian .content-body input[type="button"], .accordian .content-body input[type="submit"], .accordian .content-body button {
       margin-left: 0px; }
+    .accordian .content-body .back-btn {
+      font-size: 14px; }
     .accordian .content-body .pay-options {
       margin-top: 6px; }
       .accordian .content-body .pay-options a {
