--- a/public/stylesheets/sass/site-manager.scss
+++ b/public/stylesheets/sass/site-manager.scss
@@ -108,7 +108,7 @@ h2.active-site {
     border-bottom: 1px solid $light-border;
     padding: 10px;
     .title { float: left; width: 175px; margin: 0; }
-    .status { float: left; width: 275px; }
+    .status { float: left; width: 275px; color: #080; }
     .action {
       color: #3B5998;
       text-decoration: underline; 
