Added ok button to payment complete ui. Closes #321

--- a/app/views/site_manager/index.html.slim
+++ b/app/views/site_manager/index.html.slim
@@ -122,6 +122,7 @@
 
       .payment-complete.hide
         label.success = t 'site_manager.payment_complete'
+        button.ok = t 'general.ok'
 
       | <% if (isSubscribed) { %>
       form.cancel action="{{ cancelPath }}" method="POST" data-remote="true"
