--- a/app/views/site_manager/index.html.slim
+++ b/app/views/site_manager/index.html.slim
@@ -108,9 +108,9 @@
       h3.title = t 'site_manager.site_grade'
       .status
         | <% if (isPremium && subscriptionEndDate) { %>
-        | {{ grade }} (#{ t 'site_manager.next_charge' } {{ nextChargeDate }})
+        | {{ grade }} (#{ t 'site_manager.next_charge' })
         | <% } else if (isPremium) { %>
-        | {{ grade }} (#{ t 'site_manager.expires' } {{ expireDate }})
+        | {{ grade }} (#{ t 'site_manager.expires' })
         | <% } else { %>
         | {{ grade }}
         | <% } %>
