--- a/public/stylesheets/sass/site-manager.scss
+++ b/public/stylesheets/sass/site-manager.scss
@@ -136,8 +136,9 @@ h2.active-site {
     input[type="button"], input[type="submit"], button { margin-left: 0px; }
     .back-btn { font-size: 14px; }
     
+    .subscribe-options  label { margin-right: 30px; }
     .pay-options {
-      margin-top: 6px;
+      margin-top: 12px;
       a { margin-right: 6px; }
     }
   }
