--- a/public/stylesheets/sass/account.scss
+++ b/public/stylesheets/sass/account.scss
@@ -18,7 +18,34 @@
   background: $light-bg-color;
   border-top: 1px solid #b3b3b3;
   padding: 10px 20px;
-  min-height:450px;
+  height:450px;
+  overflow: auto;
 
   table { padding-bottom: 10px; }
+
+  .payment-history-wrapper {
+    max-height: 400px;
+    overflow: auto;
+    border: 1px solid #C1DAD7;
+  }
+
+  .payment-history {
+    border-collapse: collapse;
+    width: 100%; 
+
+    .header {  
+      background-color: #D9C780;
+      border-top: 1px solid #C1DAD7;
+      border-bottom: 1px solid #C1DAD7;
+      letter-spacing: 2px;
+      text-transform: uppercase;
+      text-align: left;
+      padding: 6px 6px 6px 12px;
+      font-weight: bold; 
+    }
+    .date, .amount { width: 85px; }
+    td { padding: 3px 16px 3px 6px; border-right: 1px solid #C1DAD7; }
+    .name { border-right: none; }
+    .even { background-color: #D6E9E7; margin: 6px 0px; }
+  }
 }
