--- a/public/stylesheets/sass/site-manager.scss
+++ b/public/stylesheets/sass/site-manager.scss
@@ -141,6 +141,7 @@ h2.active-site {
       margin-top: 12px;
       a { margin-right: 6px; }
     }
+    label { margin-right: 12px; }
   }
 
   .signup-keys {
