--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -25,6 +25,7 @@ window.g = {
   header_text_color: "<%=escape_javascript @company.settings.header_text_color %>",
   MAX_TEXT_CHARS: <%= @max_text_chars || -1 %>,
   MAX_COMPANY_NAME_LENGTH: <%= MAX_COMPANY_NAME_LENGTH %>,
+  MAX_RSS_FEED_COUNT: <%= MAX_RSS_FEED_COUNT %>,
   openEditSettings: <%= @open_edit_settings || false %>,
 
   wphotoUploadPath: "<%= wphoto_upload_path %>",
