--- a/app/views/shared/_mobile-data-loader.html.erb
+++ b/app/views/shared/_mobile-data-loader.html.erb
@@ -16,7 +16,8 @@ window.g = {
   isPreview: <%= @is_preview_mode.present? %>,
   isBuilder: <%= @is_builder.present? %>,
   isTablet: /<%= tablet_devices %>/i.test( navigator.userAgent.toLowerCase() ),
-  isMobile: /<%= mobile_devices %>/i.test( navigator.userAgent.toLowerCase() )
+  isMobile: /<%= mobile_devices %>/i.test( navigator.userAgent.toLowerCase() ),
+  max_rss_feed_count: 50,
 };
 window.widgetClasses = {};
 window.widgetPages = {};
