Updated CSS in builder.css, signup.css, site-manager.css

--- a/public/stylesheets/sass/signup.scss
+++ b/public/stylesheets/sass/signup.scss
@@ -66,7 +66,7 @@ label {
     padding-left: 0;
     margin-top: 54px; }
   .option {
-    height: 16px;
+    //height: 16px;
     padding: 3px 0 2px 4px;
     clear: left;
     .icon {
