--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -32,7 +32,7 @@ div.wysiwyg ul.toolbar {
       float: left;
       width: 16px;
       height: 16px;
-      margin: -1px 4px 0 0;
+      margin: 0px 4px 0 0;
       background: url(/images/test-icons.png); }
     #sidebar .option:hover {
       background-color: #d8dfea;
@@ -401,6 +401,10 @@ div.wysiwyg ul.toolbar {
   #builder .edit-area.edit-advanced-settings .site-settings textarea,
   #builder .edit-area.customize .site-settings textarea {
     height: 4em; }
+  #builder .edit-area.edit-settings .site-settings select,
+  #builder .edit-area.edit-advanced-settings .site-settings select,
+  #builder .edit-area.customize .site-settings select {
+    max-width: 250px; }
   #builder .edit-area.edit-settings select,
   #builder .edit-area.edit-advanced-settings select,
   #builder .edit-area.customize select {
