--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -43,7 +43,7 @@ div.wysiwyg ul.toolbar {
       float: left;
       width: 16px;
       height: 16px;
-      margin: -1px 4px 0 0;
+      margin: 0px 4px 0 0;
       background: url(/images/test-icons.png); }
     &:hover {
       background-color: $highlight-color;
@@ -432,6 +432,7 @@ div.wysiwyg ul.toolbar {
       width: 240px;
     }
     textarea { height: 4em; }
+    select { max-width: 250px; }
   }
   select { width: auto; }
   .top { vertical-align: top; }
