--- a/public/stylesheets/site-manager.css
+++ b/public/stylesheets/site-manager.css
@@ -89,7 +89,8 @@ h2.active-site {
     padding: 10px; }
     .accordian .content-header .title {
       float: left;
-      width: 175px;
+      width: 170px;
+      padding-right: 24px;
       margin: 0; }
     .accordian .content-header .status {
       float: left;
