--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -246,7 +246,7 @@ p {
     border-radius: 12px;
     -webkit-border-radius: 12px;
     -moz-border-radius: 12px;
-    background: no-repeat;
+    background-repeat: repeat;
     &:hover {
       cursor: pointer; } }
   .title {
